--- a/Capitoli/Firebase.tex
+++ b/Capitoli/Firebase.tex
@@ -24,7 +24,7 @@ Lo sviluppo di Firebase inizi\'o dall'omonima azienda che nel 2011 svilupp\'o la
 
 \section{Servizi}                 %crea la sezione
 Firebase offre diversi servizi, mettendo a disposizione anche SDK (Software development kit) e API (Application programming interface) multipiattaforma (Android, Ios, JavaScript, C++, Unity) per interagire con essi.\\
-I servizi offerti da Firebase sono circa 20\footnote{https://firebase.google.com/products/}, realizzati per facilitare lo sviluppo e la gestione del backend, permettendo ad uno sviluppatore di concentrarsi maggiormente sulla parte client e meno sulla manutenzione e gestione del backend.\\
+I servizi\footnote{https://firebase.google.com/products/} offerti da Firebase sono circa 20, realizzati per facilitare lo sviluppo e la gestione del backend, permettendo ad uno sviluppatore di concentrarsi maggiormente sulla parte client e meno sulla manutenzione e gestione del backend.\\
 Tra i vari servizi forniti, quelli pi\'u utili, nell'ambito dello sviluppo software sono:
 
 
@@ -57,16 +57,15 @@ Google offre due differenti database con supporto della sincronizzazone dei dati
 \end{itemize}
 
 
-\textbf{RealTime Database} \'e un cloud database NoSQL che memorizza i dati in un unico file JSON. Il database e formato da modello gerarchico ad albero con un unica radice ed ha una struttura \'e senza schema che pu'\o cambiare nel tempo.\\
-Utilizzando l'SDK, i le richieste effettuate al RealTime Database vengono memorizzati localmente nella cache, e aggiornati in tempo reale al susseguirsi di modifiche e eventi, dando all' utente finale un' esperienza reattiva.\\ Quando il dispositivo precedentemente offline riacquista la connessione, l'SDK del Realtime Database sincronizza le modifiche dei dati locali con gli aggiornamenti remoti che si sono verificati mentre il client era offline, risolvendo automaticamente eventuali conflitti.\\
+\textbf{RealTime Database} \'e un cloud database NoSQL che memorizza i dati in un unico file JSON. Il database \'e organizzato attraverso un modello gerarchico ad albero con un unica radice ed ha una struttura senza schema che pu'\o cambiare nel tempo.\\
+Utilizzando l'SDK, tutte le richieste effettuate al RealTime Database vengono memorizzate localmente nella cache del client, e vengono aggiornate in tempo reale al susseguirsi di modifiche ed eventi.\\ Quando il dispositivo precedentemente offline riacquista la connessione, l'SDK del Realtime Database sincronizza le modifiche dei dati locali con gli aggiornamenti remoti che si sono verificati mentre il client era offline, risolvendo automaticamente eventuali conflitti.\\
 
 
 \textbf{Cloud Firestore} \'e un cloud database NoSQL basato sulla memorizzazione dei dati sottoforma di documenti e collezzioni, anche la sua struttura \'e senza schema e pu\'o quindi cambiare nel tempo.\\
-Il modello di memorizzazione dei dati \'e basato sui documenti che possono contenere dati come stringhe e numeri, oggetti complessi e annidati.\\
-Questi documenti sono archiviati in raccolte, chiamate collezzioni che contengono i documenti, queste collezzioni vengono utilizzate per organizzare i dati e creare query.\\
-\'E inoltre possibile creare subcollezioni all'interno dei documenti e creare strutture gerarchiche di dati che scalano man mano che il database cresce.\\
+Il modello di memorizzazione dei dati \'e basato sui documenti che possono contenere  stringhe e numeri, date, oggetti complessi e annidati.\\
+Questi documenti sono archiviati in raccolte, chiamate collezzioni che contengono i documenti. \'E inoltre possibile creare subcollezioni all'interno dei documenti e creare strutture gerarchiche di dati che scalano man mano che il database cresce.\\
 Gli unici limiti imposti da Firestore sono: la dimensione di un singolo documento che \'e di 1 MiB (1,048,576 bytes) e un massimo di 100 collezzioni annidate.\\
-Il database Firestore mantiene i dati aggiornati attraverso una buona comunicazione client-server, i client attraverso l'utilizzo delle librerie SDK e di listener appositi offrono una sincronizzazione dei dati in tempo reale.\\
+L'SDK del database Firestore mantiene i dati aggiornati attraverso una buona gestione del caching, i client invece utilizzando appositi listener offrono una sincronizzazione dei dati in tempo reale.\\
 L'aggiunta di listener oltre a informare il client su modifiche effettuate nel database, permette di memorizzare le richieste effettuate in precedenza e mantenere una copia delle risposte del server nella cache, offrendo quindi un supporto offline dei dati.\\
 
 I tipi di dato messi a disposizione da Firestore sono:
@@ -92,7 +91,7 @@ String & Stringa di testo codificata in UTF-8.\\
 \end{center}
 \end{table}
 
-L' interrogazione del database Firestore attraverso query risulta essere molto espressiva ed efficiente. \'E possibile creare query per filtrare solo alcuni dati all'interno di un documento o filtrare collezzioni, con la caratteristiche basilari delle interrogazioni: l'ordinamento, il filtraggio e limiti sui risultati di una query. Si possono filtrare anche sottocampi di un oggetto Map, ma non \'e possibile filtrare o ordinare un elemento di tipo Reference che serve solo ad indicare il riferimento di un documento all'interno del database.\\
+L' interrogazione del database Firestore attraverso query risulta essere molto espressiva ed efficiente. La creazione delle query permette di filtrare i dati all'interno di un documento o filtrare collezzioni, con la caratteristiche basilari delle interrogazioni: l'ordinamento, il filtraggio e limiti sui risultati di una query. Si possono filtrare anche sottocampi di un oggetto Map, ma non \'e possibile filtrare o ordinare un elemento di tipo Reference che serve solo ad indicare il riferimento di un documento all'interno del database.\\
 Cloud Firestore offre un SDK con una buona integrazione per dispositivi mobili Android, iOS e web apps, ma permette l'utilizzo dei servizi anche offrendo SDK aggiuntive per altri linguaggi di programmazione come: NodeJS, Java, Python, e GO.\\
 
 
@@ -118,8 +117,8 @@ Ricapitolando, possiamo definire Firestore come una nuova versione di Firebase R
 
 
 \subsection{Database Rules}                 %crea la sezione
-Firebase offre per i suoi due database la possibilit\'a di inserire delle restrizioni e regole di sicurezza per l'accesso e le chiamate al Database, chiamate Database Rules.\\
-Le Database Rules determinano chi ha accesso in lettura e scrittura al database o a collezzioni di dati all'interno del database, queste regole sono gestibili modificabili, utilizzando il pannello di controllo di Firebase, una volta scritte le regole queste vengono applicate automaticamente ad ogni modifica. \\
+Firebase offre per i suoi due database la possibilit\'a di inserire delle restrizioni e regole di sicurezza per l'accesso al Database, chiamate Database Rules.\\
+Le Database Rules determinano chi ha accesso in lettura e scrittura al database o a collezzioni di dati all'interno del database, queste regole sono gestite utilizzando il pannello di controllo di Firebase, una volta scritte le regole queste vengono applicate automaticamente ad ogni modifica. \\
 Ogni richiesta di lettura e scrittura di dati nel database sar\'a completata solo se le regole lo consentono.\\
 Entrambi i database: Real time e Firestore supportano le Database Rules, le differenze fra i due servizi riguardano il metodo con cui vengono scritte le regole e il tipo di controlli che \'e possibile effetuare.\\
 Firebase permette di scrivere le regole utilizzando un file in formato JSON dove vengono definite le regole in base alla collezzione in cui si trovano i dati, alla validazione dei dati o in base all'utente loggato su Firebase Auth.\\
@@ -160,9 +159,9 @@ Le regole per il database RealTime vengono memorizzate in formato JSON sui serve
 
 
 
-Le regole di sicurezza del database Firestore sono simili a quelle del RealTime Database ma prevedono un controllo degli accessi e della convalida dei dati in un formato pi\'u semplice ed espressivo.\\
+Le regole di sicurezza del database Firestore sono simili a quelle del RealTime Database ma prevedono un controllo degli accessi e della validazione dei dati in un formato pi\'u semplice ed espressivo.\\
 Tutte le regole di sicurezza Firestore sono costituite da dichiarazioni di corrispondenza chiamate ``match'' che identificano i documenti nel database e consentono la creazione di espressioni che controllano l' accesso a tali documenti.\\
-Oltre alle regole di scrittura, letttura, condalidazione \'e possibile creare funzioni ausiliarie per semplificare e rendere pi\'u intuitiva la scritture delle regole.\\
+Oltre alle regole di scrittura, letttura, validazione \'e possibile creare funzioni ausiliarie per semplificare e rendere pi\'u intuitiva la scritture delle regole.\\
 Un esempio di scrittura di alcune regole su un database Firestore \'e il seguente:
 
 \begin{lstlisting}[language=javascript,caption={Firestore Rules}]
@@ -183,8 +182,8 @@ service cloud.firestore {
 
 \section{Cloud Functions}                 %crea la sezione
 
-Le Cloud Functions consentono di eseguire automaticamente il codice backend in risposta a modifiche effettuate nel database Firestore o RealTime.\\
-I linguaggi utilizzati per scrivere le Cloud Functions sono JavaScript e TypeScript, una volta scritta una funzione essa viene memorizzata e gestita dai server Google e man mano che il carico aumenta o diminuisce, Google scala automaticamente il numero di istanze di server virtuali necessari per eseguire le funzioni.
+Le Cloud Functions consentono di eseguire del codice backend in risposta a modifiche effettuate nel database Firestore o RealTime.\\
+I linguaggi utilizzati per scrivere le Cloud Functions sono JavaScript e TypeScript, una volta scritta una funzione essa viene memorizzata e gestita dai server Firebase e man mano che il carico aumenta o diminuisce, Google scala automaticamente il numero di istanze di server virtuali necessari per eseguire le funzioni.
 
 
 Il ciclo di vita di una funzione \'e il seguente:
@@ -235,7 +234,7 @@ exports.modifyUser = functions.firestore.document('users/{userID}').onWrite(even
 
 \newpage              % ends first column but not page
 \subsection{Esempi di utilizzo}
-Le cloud functions possono essere utilizzati anche interagendo con gli altri servizi Firebase, un esempio di integrazione tipico potrebbe essere quello di creare l'anteprima di un immagine e salvarla su Firebase storage:
+Le cloud functions possono essere utilizzati anche interagendo con gli altri servizi Firebase, un esempio di integrazione tipico potrebbe essere quello di creare l'anteprima di un immagine e salvarla su Firebase Storage:
 
 \begin{figure}[!hb]
 
@@ -243,7 +242,7 @@ Le cloud functions possono essere utilizzati anche interagendo con gli altri ser
   \caption{Firebase Storage e Cloud Functions esempio 1}\label{fig:Firebase Storage e Cloud Functions esempio 1}
 \end{figure}
 
-In questo esempio un funzione si attiva quando un immagine viene caricata in sullo storage firebase, la funzione scarica l'immagine e ne crea una versione miniaturizzata, in seguito scrive il riferimento della miniatura sul database, in modo che un'applicazione client possa trovarla e utilizzarla.\\
+In questo esempio un funzione si attiva quando un immagine viene caricata in sullo Storage Firebase, la funzione scarica l'immagine e ne crea una versione miniaturizzata, in seguito scrive il riferimento della miniatura sul database, in modo che un'applicazione client possa trovarla e utilizzarla.\\
 % Un'altro esempio \'e l'utilizzo delle cloud functions per effettuare controlli su un tipo di linguaggio inappropriato all'interno di una chat,forum o commento:\\
 %
 % \begin{figure}[h!]
@@ -259,9 +258,8 @@ In questo esempio un funzione si attiva quando un immagine viene caricata in sul
 %https://developer.xamarin.com/guides/android/data-and-cloud-services/google-messaging/firebase-cloud-messaging/
 \section{Cloud Messaging}                 %crea la sezione
 Firebase Cloud Messaging (FCM) \'e una soluzione di messaggistica multipiattaforma che consente di inviare messaggi tra dispositivi con la possibilt\'a di notificare a una o pi\'u applicazioni client che sono disponibili nuovi dati.\\
-\'E possibile inviare messaggi tramite l'Admin SDK o le API HTTP e XMPP, il carico utile massimo per un messaggio \'e di 4KB, tranne quando si inviano messaggi dalla console Firebase, che impone un limite di 1024 caratteri.\\
-I messaggi possono essere di due tipologie: kessaggi di notifica e messaggi di dati.
-La differenza fra i due tipi di messaggi \'e la loro composizione: i messaggi di notifica contengono un insieme predefinito di chiavi visualizzabili dall' utente, mentre i messaggi di dati contengono solo un insieme di chiave-valore definito dall'utente.\\
+\'E possibile inviare messaggi tramite l'Admin SDK\footnote{https://firebase.google.com/docs/admin/setup} o le API HTTP e XMPP, rispettando la dimensione massima di un messaggio corrispondente a 4KB.\\
+I messaggi possono essere di due tipologie: messaggi di notifica e messaggi di dati, l differenza fra i due tipi di messaggi \'e la loro composizione: i messaggi di notifica contengono un insieme predefinito di chiavi visualizzabili dall' utente, mentre i messaggi di dati contengono solo un insieme di chiave-valore definito dall'utente.\\
 Entrambi i messaggi richiedono di definire il campo obbligatorio ``token'' che \'e il riferimento di un dispositivo o di un gruppo di dispositivi, questo token \'e generato tramite l'SDK di Firebase e deve essere memorizzato su un server per poter essere riutilizzato, in caso contrario l'SDK permette di aggiornare il token del dispositivo.
 
 \begin{figure}[!hb]
@@ -276,7 +274,7 @@ La ricezione dei messaggi di Cloud Messaging \'e possibile solo se si utilizza l
 All'avvio iniziale dell' applicazione, l'SDK FCM genera un token di registrazione per l'istanza dell' applicazione client.\\
 I token e la ricezione dei messaggi possono essere controllati utilizzando le classi offerte dall'SDK.
 La classe "FirebaseInstanceIdService" viene utilizzata per la gestione dei token, mentre la classe "FirebaseMessagingService" viene utilizzata per la gestione dei messaggi ricevuti.\\
-Il token di registrazione pu\'o cambiare quando l'applicazione elimina il token, ripristina/riinstalla o dinistalla l'app, o quando vengono eliminare le cache dal dispositivo.
+Il token di registrazione pu\'o cambiare quando l'applicazione elimina il token, ripristina,riinstalla, dinistalla l'app, o quando vengono eliminare le cache e i dati dal dispositivo.
 
 
 \subsection{Messaggi}
@@ -300,8 +298,8 @@ I messaggi Downstream, permettono di inviare una notifica push dal Server verso 
 
 \begin{itemize}
     \item Il server (per esempio Cloud Functions) invia il messaggio a FCM
-    \item Se il client non è disponibile, il server FCM memorizza il messaggio in una coda per la successiva trasmissione. I messaggi vengono conservati nella memoria FCM per un massimo di 4 settimane
-    \item Quando il dispositivo client è disponibile, FCM inoltra il messaggio all' applicazione
+    \item Se il client non \'e disponibile, il server FCM memorizza il messaggio in una coda per la successiva trasmissione. I messaggi vengono conservati nella memoria FCM per un massimo di 4 settimane
+    \item Quando il dispositivo client \'e disponibile, FCM inoltra il messaggio all' applicazione
     \item L' applicazione client riceve il messaggio da FCM, lo elabora e lo visualizza all' utente
 \end{itemize}
 
@@ -318,10 +316,10 @@ Sulla base del modello di pubblicazione/iscrizione invece, FCM consente anche di
 
 
     \begin{itemize}
-        \item L' applicazione client si iscrive a un argomento inviando un messaggio di sottoscrizione all server FCM.
-        \item L' app server invia messaggi tematici a FCM per la distribuzione.
-        \item Quando il dispositivo client è disponibile, FCM inoltra il messaggio all' applicazione.
-        \item     FCM inoltra messaggi tematici ai clienti che si sono abbonati a tale argomento.
+        \item L'applicazione client si iscrive a un argomento inviando un messaggio di sottoscrizione all server FCM.
+        \item Il server invia messaggi tematici a FCM per la distribuzione.
+        \item Quando il dispositivo client \'e disponibile, FCM inoltra il messaggio all' applicazione.
+        \item  FCM inoltra messaggi tematici ai clienti che si sono abbonati a tale argomento.
 
     \end{itemize}
 
@@ -334,7 +332,7 @@ Per iscriversi a un argomento, l' applicazione client chiama la funzione
  FirebaseMessaging.getInstance().subscribeToTopic("news");
 \end{lstlisting}
 
-Per annullare l' iscrizione, l' applicazione client deve richiamare unsubscribeFromTopic () con il nome dell' argomento.
+Per annullare l' iscrizione, l' applicazione client deve richiamare unsubscribeFromTopic() con il nome del topic.
 
 
 
@@ -377,9 +375,9 @@ Esistono due opzioni per assegnare la priorit\'a di consegna ai messaggi: normal
 
 
 \section{FirebaseUI}                 %crea la sezione
-FirebaseUI \'e un insieme di librerie open-source per Firebase che consentono di semplificare lo sviluppo di un applicazione che utilizza Firebase.\\
-I miglioramenti vengono apportati attraverso una versione semplificata dell' autenticazione, fornendo metodi che si integrano con i pi\'u comuni social, migliorare la gestone delle view con la sincronizzazione in tempo reale del database e funzionalit\'a aggiuntive per il servizio Firebase Storage.\\
-FirebaseUI dispone di moduli separati per utilizzare Firebase Realtime Database, Cloud Firestore, Firebase Auth e Cloud Storage.
+FirebaseUI\footnote{https://firebaseopensource.com/projects/firebase/firebaseui-android/} \'e un insieme di librerie open-source disponibile per diverse piattaforme, che consentono di semplificare lo sviluppo di un applicazione che utilizza Firebase.\\
+La libreria offre una versione semplificata della gestione dell'autenticazione, fornendo metodi che si integrano con i pi\'u comuni social, migliora la comunicazione tra le view del dispostivio client e il database, e facilita la gestione del servizio Firebase Storage.\\
+FirebaseUI dispone di moduli separati per utilizzare i vari servizi: Firebase Realtime Database, Cloud Firestore, Firebase Auth e Cloud Storage.
 \begin{itemize}
   \item  FirebaseUI Auth
   \item  FirebaseUI Firestore
@@ -389,7 +387,7 @@ FirebaseUI dispone di moduli separati per utilizzare Firebase Realtime Database,
 
 
 FirebaseUI-Auth cerca di gestire tutte le possibili casistiche che si possono riscontrare durante il login e la registrazione di un nuovo utente.
-La libreria FirebaseUIAuth offre una integrazione con i social login pi\'u diffusi (Google, Facebook, Twitter) e una buona integrazione con Smart Lock for Password per memorizzare e recuperare le credenziali, consentendo l' accesso automatico e single-tap sign-in, gestendo anche casi d'uso pi\'u complessi come il recupero dell'account e il collegamento di account multipli che sono sensibili alla sicurezza e difficili da implementare correttamente utilizzando le API di base fornite da Firebase Auth.\\
-FirebaseUI-Firestore semplifica il collegamento dei dati da Cloud Firestore all' interfaccia utente dell' applicazione, fornendo un adapter personalizzato  (FirestoreRecyclerAdapter) che consente la manipolazione e sincronizzazione automatica tra le view e il database Firestore.
+La libreria FirebaseUIAuth offre una integrazione con i social login pi\'u diffusi (Google, Facebook, Twitter) e una buona integrazione con Smart Lock per memorizzare e recuperare le credenziali, consentendo l' accesso automatico e il single-tap sign-in, gestendo anche casi d'uso pi\'u complessi come il recupero dell'account e il collegamento di account multipli che sono sensibili alla sicurezza e difficili da implementare correttamente utilizzando le API di base fornite da Firebase Auth.\\
+FirebaseUI-Firestore semplifica la comunicazione e l'interazione dei dati fra Cloud Firestore e l'interfaccia utente dell' applicazione, fornendo un adapter personalizzato  (FirestoreRecyclerAdapter) che consente la manipolazione e la sincronizzazione automatica dei dati.
 
 \clearpage{\pagestyle{empty}\cleardoublepage}
